--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-  //The calculator container
+  <!-- The calculator container -->
   <div class="calculator">
-    //The input box, where the calculation will be displayed
+    <!-- The input box, where the calculation will be displayed -->
     <div class="inputBox">
       <input class="input" id="display" type="text" disabled />
     </div>
-    //The buttons "Numbers and Symbols"
+    <!-- The buttons "Numbers and Symbols" -->
     <div class="firstRow">
       <button class="clear" onclick="clearDisplay()">C</button>
       <button class="division" onclick="appendToDisplay('/')">/</button>
